--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>demo-list</title>
+	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
 	<link rel="stylesheet" href="./index.css">
 	<link href="https://cdn.bootcss.com/animate.css/3.5.1/animate.min.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/wow/1.1.1/wow.min.js"></script>
 	<script src="index.js"></script>
+	<title>demo-list</title>
 </head>
 <body>
 	<div class="header"><a href="http://www.yancx.cn/" class="animated zoomIn" >返回首页</a></div>
