--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="header"><a href="http://www.yancx.cn/" class="animated zoomIn" >返回首页</a></div>
 	<div class="content">
-		<div class="ani-group wow animated fadeInUp"  data-wow-duration="1s">
+		<div class="ani-group wow animated fadeInUp">
 			<div class="box-wrap">
 				<div class="box">
 					<a href="http://www.yancx.cn/SimpleMall/" target="_blank">
@@ -52,7 +52,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="ani-group wow animated fadeInUp"  data-wow-delay=".5s">
+		<div class="ani-group wow animated fadeInUp">
 			<div class="box-wrap">
 				<div class="box">
 					<a href="http://www.yancx.cn/SimpleMall/" target="_blank">
