--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 			</div>
 			<div class="box-wrap">
 				<div class="box">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-					<div class="title">简单的商城SimpleMall</div>
-					<div class="tag"><span>jquery</span></div>
-					<div class="date">2018-02-05</div>
+						<img src="http://pba664p5e.bkt.clouddn.com/fliggy.jpg" alt="fliggy">
+					<div class="title">vue仿写飞猪</div>
+					<div class="tag"><span>vue</span></div>
+					<div class="date">2017-12-06</div>
 				</div>
 			</div>
 			<div class="box-wrap">
 				<div class="box">
 					<a href="www.yancx.cn/SimpleMall/">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-						<div class="title">简单的商城SimpleMall</div>
-						<div class="tag"><span>jquery</span></div>
-						<div class="date">2018-02-05</div>
+						<img src="http://pba664p5e.bkt.clouddn.com/loadingbar.jpg" alt="加载条">
+						<div class="title">巧妙实现页面加载条</div>
+						<div class="tag"><span>JavaScript</span></div>
+						<div class="date">2017-09-20</div>
 					</a>
 				</div>
 			</div>
@@ -56,74 +56,36 @@
 			<div class="box-wrap">
 				<div class="box">
 					<a href="http://www.yancx.cn/SimpleMall/" target="_blank">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-						<div class="title">简单的商城SimpleMall</div>
+						<img src="http://pba664p5e.bkt.clouddn.com/magnifier.jpg" alt="淘宝橱窗放大镜功能">
+						<div class="title">淘宝橱窗放大镜功能</div>
 					</a>
-					<div class="tag"><span>jquery</span></div>
-					<div class="date">2018-02-05</div>
+					<div class="tag"><span>javascript</span></div>
+					<div class="date">2017-09-18</div>
 				</div>
 			</div>
 			<div class="box-wrap">
 				<div class="box">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-					<div class="title">简单的商城SimpleMall</div>
-					<div class="tag"><span>jquery</span></div>
-					<div class="date">2018-02-05</div>
+						<img src="http://pba664p5e.bkt.clouddn.com/slide.jpg" alt="JS简单轮播图">
+					<div class="title">JS简单轮播图</div>
+					<div class="tag"><span>javascript</span></div>
+					<div class="date">2017-5-23</div>
 				</div>
 			</div>
 			<div class="box-wrap">
 				<div class="box">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-					<div class="title">简单的商城SimpleMall</div>
-					<div class="tag"><span>jquery</span></div>
-					<div class="date">2018-02-05</div>
+						<img src="http://pba664p5e.bkt.clouddn.com/sharebar.jpg" alt="贴边分享按钮">
+					<div class="title">贴边分享按钮</div>
+					<div class="tag"><span>javascript</span></div>
+					<div class="date">2017-02-08</div>
 				</div>
 			</div>
 			<div class="box-wrap">
 				<div class="box">
-					<a href="www.yancx.cn/SimpleMall/">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-						<div class="title">简单的商城SimpleMall</div>
-						<div class="tag"><span>jquery</span></div>
-						<div class="date">2018-02-05</div>
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="ani-group wow animated fadeInUp">
-			<div class="box-wrap">
-				<div class="box">
-					<a href="http://www.yancx.cn/SimpleMall/" target="_blank">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-						<div class="title">简单的商城SimpleMall</div>
-					</a>
-					<div class="tag"><span>jquery</span></div>
-					<div class="date">2018-02-05</div>
-				</div>
-			</div>
-			<div class="box-wrap">
-				<div class="box">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-					<div class="title">简单的商城SimpleMall</div>
-					<div class="tag"><span>jquery</span></div>
-					<div class="date">2018-02-05</div>
-				</div>
-			</div>
-			<div class="box-wrap">
-				<div class="box">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-					<div class="title">简单的商城SimpleMall</div>
-					<div class="tag"><span>jquery</span></div>
-					<div class="date">2018-02-05</div>
-				</div>
-			</div>
-			<div class="box-wrap">
-				<div class="box">
-					<a href="www.yancx.cn/SimpleMall/">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-						<div class="title">简单的商城SimpleMall</div>
-						<div class="tag"><span>jquery</span></div>
-						<div class="date">2018-02-05</div>
+					<a href="http://www.yancx.cn/saturnbird/">
+						<img src="http://pba664p5e.bkt.clouddn.com/saturnbird.jpg" alt="saturnbird">
+						<div class="title">saturnbird coffee网站</div>
+						<div class="tag"><span>javascript</span></div>
+						<div class="date">2016-11-02</div>
 					</a>
 				</div>
 			</div>
