--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="box-wrap">
 				<div class="box">
-						<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
+					<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
 					<div class="title">简单的商城SimpleMall</div>
 					<div class="tag"><span>jquery</span></div>
 					<div class="date">2018-02-05</div>
@@ -35,15 +35,17 @@
 			</div>
 			<div class="box-wrap">
 				<div class="box">
+					<a href="http://www.yancx.cn/Fliggy/" target="_blank">
 						<img src="http://pba664p5e.bkt.clouddn.com/fliggy.jpg" alt="fliggy">
-					<div class="title">vue仿写飞猪</div>
-					<div class="tag"><span>vue</span></div>
-					<div class="date">2017-12-06</div>
+						<div class="title">vue仿写飞猪</div>
+						<div class="tag"><span>vue</span></div>
+						<div class="date">2017-12-</div>
+					</a>
 				</div>
 			</div>
 			<div class="box-wrap">
 				<div class="box">
-					<a href="www.yancx.cn/SimpleMall/">
+					<a href="./demos/loadingbar/" target="_blank">
 						<img src="http://pba664p5e.bkt.clouddn.com/loadingbar.jpg" alt="加载条">
 						<div class="title">巧妙实现页面加载条</div>
 						<div class="tag"><span>JavaScript</span></div>
@@ -55,7 +57,7 @@
 		<div class="ani-group wow animated fadeInUp">
 			<div class="box-wrap">
 				<div class="box">
-					<a href="http://www.yancx.cn/SimpleMall/" target="_blank">
+					<a href="./demos/magnifier/" target="_blank">
 						<img src="http://pba664p5e.bkt.clouddn.com/magnifier.jpg" alt="淘宝橱窗放大镜功能">
 						<div class="title">淘宝橱窗放大镜功能</div>
 					</a>
@@ -65,23 +67,27 @@
 			</div>
 			<div class="box-wrap">
 				<div class="box">
+					<a href="./demos/slide/" target="_blank">
 						<img src="http://pba664p5e.bkt.clouddn.com/slide.jpg" alt="JS简单轮播图">
-					<div class="title">JS简单轮播图</div>
-					<div class="tag"><span>javascript</span></div>
-					<div class="date">2017-5-23</div>
+						<div class="title">JS简单轮播图</div>
+						<div class="tag"><span>javascript</span></div>
+						<div class="date">2017-5-23</div>
+					</a>
 				</div>
 			</div>
 			<div class="box-wrap">
 				<div class="box">
+					<a href="./demos/sharebar/" target="_blank">
 						<img src="http://pba664p5e.bkt.clouddn.com/sharebar.jpg" alt="贴边分享按钮">
-					<div class="title">贴边分享按钮</div>
-					<div class="tag"><span>javascript</span></div>
-					<div class="date">2017-02-08</div>
+						<div class="title">贴边分享按钮</div>
+						<div class="tag"><span>javascript</span></div>
+						<div class="date">2017-02-08</div>
+					</a>
 				</div>
 			</div>
 			<div class="box-wrap">
 				<div class="box">
-					<a href="http://www.yancx.cn/saturnbird/">
+					<a href="http://www.yancx.cn/saturnbird/" target="_blank">
 						<img src="http://pba664p5e.bkt.clouddn.com/saturnbird.jpg" alt="saturnbird">
 						<div class="title">saturnbird coffee网站</div>
 						<div class="tag"><span>javascript</span></div>
