--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<img src="http://pba664p5e.bkt.clouddn.com/fliggy.jpg" alt="fliggy">
 						<div class="title">vue仿写飞猪</div>
 						<div class="tag"><span>vue</span></div>
-						<div class="date">2017-12-</div>
+						<div class="date">2017-12-03</div>
 					</a>
 				</div>
 			</div>
