--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
 			</div>
 			<div class="box-wrap">
 				<div class="box">
-					<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
-					<div class="title">简单的商城SimpleMall</div>
-					<div class="tag"><span>jquery</span></div>
-					<div class="date">2018-02-05</div>
-				</div>
-			</div>
-			<div class="box-wrap">
-				<div class="box">
 					<a href="http://www.yancx.cn/Fliggy/" target="_blank">
 						<img src="http://pba664p5e.bkt.clouddn.com/fliggy.jpg" alt="fliggy">
 						<div class="title">vue仿写飞猪</div>
 						<div class="tag"><span>vue</span></div>
 						<div class="date">2017-12-03</div>
+					</a>
+				</div>
+			</div>
+			<div class="box-wrap">
+				<div class="box">
+					<a href="./demos/waterfall/">
+						<img src="http://pba664p5e.bkt.clouddn.com/waterfall.jpg" alt="waterfall">
+						<div class="title">瀑布流布局</div>
+						<div class="tag"><span>javascript</span></div>
+						<div class="date">2017-11-20</div>
 					</a>
 				</div>
 			</div>
