图片地址修改

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport"
+		content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
 	<link rel="stylesheet" href="./index.css">
 	<link href="https://cdn.bootcss.com/animate.css/3.5.1/animate.min.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/wow/1.1.1/wow.min.js"></script>
 	<script src="index.js"></script>
 	<title>demo-list</title>
 </head>
+
 <body>
-	<div class="header"><a href="http://www.yancx.cn/" class="animated zoomIn" >返回首页</a></div>
+	<div class="header"><a href="http://www.yancx.cn/" class="animated zoomIn">返回首页</a></div>
 	<div class="content">
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
-				<a href="http://www.yancx.cn/elementui-test/" target="_blank">
-					<img src="http://pba664p5e.bkt.clouddn.com/elementui-test.jpg" alt="SimpleMall">
+				<a href="https://wuyou91.github.io/elementui-test/" target="_blank">
+					<img src="http://demo.cdn.yancx.cn/demoList/elementui-test.jpg" alt="SimpleMall">
 					<div class="title">基于vue和element-ui的后台管理系统</div>
 				</a>
 				<div class="tag"><span>vue</span></div>
@@ -26,8 +29,8 @@
 		</div>
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
-				<a href="http://www.yancx.cn/SimpleMall/" target="_blank">
-					<img src="http://pba664p5e.bkt.clouddn.com/simplemall.jpg" alt="SimpleMall">
+				<a href="https://wuyou91.github.io/SimpleMall/" target="_blank">
+					<img src="http://demo.cdn.yancx.cn/demoList/simplemall.jpg" alt="SimpleMall">
 					<div class="title">简单的商城SimpleMall</div>
 				</a>
 				<div class="tag"><span>jquery</span></div>
@@ -36,8 +39,8 @@
 		</div>
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
-				<a href="http://www.yancx.cn/Fliggy/" target="_blank">
-					<img src="http://pba664p5e.bkt.clouddn.com/fliggy.jpg" alt="fliggy">
+				<a href="https://wuyou91.github.io/Fliggy/" target="_blank">
+					<img src="http://demo.cdn.yancx.cn/demoList/fliggy.jpg" alt="fliggy">
 					<div class="title">vue仿写飞猪</div>
 					<div class="tag"><span>vue</span></div>
 					<div class="date">2017-12-03</div>
@@ -47,7 +50,7 @@
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
 				<a href="./demos/waterfall/">
-					<img src="http://pba664p5e.bkt.clouddn.com/waterfall.jpg" alt="waterfall">
+					<img src="http://demo.cdn.yancx.cn/demoList/waterfall.jpg" alt="waterfall">
 					<div class="title">瀑布流布局</div>
 					<div class="tag"><span>javascript</span></div>
 					<div class="date">2017-11-20</div>
@@ -57,7 +60,7 @@
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
 				<a href="./demos/loadingbar/" target="_blank">
-					<img src="http://pba664p5e.bkt.clouddn.com/loadingbar.jpg" alt="加载条">
+					<img src="http://demo.cdn.yancx.cn/demoList/loadingbar.jpg" alt="加载条">
 					<div class="title">巧妙实现页面加载条</div>
 					<div class="tag"><span>JavaScript</span></div>
 					<div class="date">2017-09-20</div>
@@ -67,7 +70,7 @@
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
 				<a href="./demos/magnifier/" target="_blank">
-					<img src="http://pba664p5e.bkt.clouddn.com/magnifier.jpg" alt="淘宝橱窗放大镜功能">
+					<img src="http://demo.cdn.yancx.cn/demoList/magnifier.jpg" alt="淘宝橱窗放大镜功能">
 					<div class="title">淘宝橱窗放大镜功能</div>
 				</a>
 				<div class="tag"><span>javascript</span></div>
@@ -77,7 +80,7 @@
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
 				<a href="./demos/slide/" target="_blank">
-					<img src="http://pba664p5e.bkt.clouddn.com/slide.jpg" alt="JS简单轮播图">
+					<img src="http://demo.cdn.yancx.cn/demoList/slide.jpg" alt="JS简单轮播图">
 					<div class="title">JS简单轮播图</div>
 					<div class="tag"><span>javascript</span></div>
 					<div class="date">2017-5-23</div>
@@ -87,7 +90,7 @@
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
 				<a href="./demos/sharebar/" target="_blank">
-					<img src="http://pba664p5e.bkt.clouddn.com/sharebar.jpg" alt="贴边分享按钮">
+					<img src="http://demo.cdn.yancx.cn/demoList/sharebar.jpg" alt="贴边分享按钮">
 					<div class="title">贴边分享按钮</div>
 					<div class="tag"><span>javascript</span></div>
 					<div class="date">2017-02-08</div>
@@ -96,8 +99,8 @@
 		</div>
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
-				<a href="http://www.yancx.cn/saturnbird/" target="_blank">
-					<img src="http://pba664p5e.bkt.clouddn.com/saturnbird.jpg" alt="saturnbird">
+				<a href="https://wuyou91.github.io/saturnbird/" target="_blank">
+					<img src="http://demo.cdn.yancx.cn/demoList/saturnbird.jpg" alt="saturnbird">
 					<div class="title">saturnbird coffee网站</div>
 					<div class="tag"><span>javascript</span></div>
 					<div class="date">2016-11-02</div>
@@ -106,4 +109,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
