名称错误修复

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
-				<a href="https://wuyou91.github.io/Fliggy/" target="_blank">
+				<a href="https://wuyou91.github.io/fliggy/" target="_blank">
 					<img src="http://demo.cdn.yancx.cn/demoList/fliggy.jpg" alt="fliggy">
 					<div class="title">vue仿写飞猪</div>
 					<div class="tag"><span>vue</span></div>
