--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		</div>
 		<div class="box-wrap wow animated fadeInUp">
 			<div class="box">
-				<a href="https://wuyou91.github.io/SimpleMall/" target="_blank">
-					<img src="http://demo.cdn.yancx.cn/demoList/simplemall.jpg" alt="SimpleMall">
+				<a href="https://wuyou91.github.io/simpleMall/" target="_blank">
+					<img src="http://demo.cdn.yancx.cn/demoList/simplemall.jpg" alt="simpleMall">
 					<div class="title">简单的商城SimpleMall</div>
 				</a>
 				<div class="tag"><span>jquery</span></div>
